--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,9 @@ jobs:
         uses: r-lib/actions/setup-r@v2
       - name: Install dependencies
         run: |
-          install.packages("covr")
-          install.packages("devtools")
-          remotes::install_deps()
+          Rscript -e "install.packages('covr')"
+          Rscript -e "install.packages('devtools')"
+          Rscript -e "remotes::install_deps()"
       - name: Run tests and calculate coverage
         run: |
           Rscript -e 'covr::codecov()'
