--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,9 @@ name: R-CMD-check
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   check:
@@ -14,18 +12,20 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
-      - name: Install dependencies
+
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+
+      - name: Install R packages
         run: |
-          Rscript -e "install.packages('covr')"
-          Rscript -e "install.packages('devtools')"
-          Rscript -e "remotes::install_deps()"
-      - name: Run tests and calculate coverage
+          Rscript -e 'install.packages(c("devtools", "remotes", "covr"), repos = "https://cloud.r-project.org")'
+          Rscript -e 'remotes::install_deps(dependencies = TRUE)'
+
+      - name: Run tests and upload coverage
         run: |
-          Rscript -e 'library(devtools)'
-          Rscript -e 'library(covr)'
+          Rscript -e 'devtools::load_all()'
+          Rscript -e 'devtools::test()'
           Rscript -e 'covr::codecov()'
-          Rscript -e 'covr::codecov()'
-          Rscript -e 'load_all()'
-          Rscript -e 'test()'
