--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -31,10 +31,16 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.PAGES }}@github.com/DSCI-310-2025/dataletes.git
+          
+      - name: Fetch remote branches
+        run: git fetch --all
+
+      - name: Check out main branch
+        run: |
+          git checkout main  # Now we can safely check out the main branch
 
       - name: Commit and push docs to main branch
         run: |
           git add docs/
-          git commit -m "AUTOMATIC PUSH"
-          git push origin main
+          git commit -m "Update docs with the latest changes"
+          git push https://x-access-token:${{ secrets.PAGES_TOKEN }}@github.com/DSCI-310-2025/dataletes.git main
