--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -14,7 +14,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ github.ref_name }}
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
@@ -36,7 +35,7 @@ jobs:
           git config user.email "actions@github.com"
 
       - name: Commit and push docs only if on main
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
         run: |
           git add docs/
           git commit -m "Update docs with the latest changes" || echo "No changes to commit"
